--- a/myportfolio/package.json
+++ b/myportfolio/package.json
@@ -2,7 +2,7 @@
   "name": "myportfolio",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://saisitaram2000.github.io/saisitaram2000.github.io",
+  "homepage": "https://saisitaram2000.github.io",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
